add service client app pic

--- a/Template LaTeX/TeXFiles/new_realisation.tex
+++ b/Template LaTeX/TeXFiles/new_realisation.tex
@@ -607,7 +607,7 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 	
 	\begin{figure}%
 		\centering
-		{{\includegraphics[width=5cm]{./Template LaTeX/Images/3.jpg} }}%
+		{{\includegraphics[width=5cm]{./Template LaTeX/Images/From_emu/login.png} }}%
 		\caption{Interface d'authentification}%
 		\label{fig:example}%
 	\end{figure}
@@ -649,28 +649,28 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 	\centering
 	\begin{subfigure}[b]{0.3\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{./Template LaTeX/Images/6.jpg}
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/From_emu/A_home.png}
 		\caption{Interfaces d’accueil}
 		\label{fig:y equals x}
 	\end{subfigure}
 	\hfill
 	\begin{subfigure}[b]{0.3\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{./Template LaTeX/Images/7.jpg}
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/From_emu/A_update_modif.png}
 		\caption{Gérer un compte}
 		\label{fig:three sin x}
 	\end{subfigure}
 	\hfill
 	\begin{subfigure}[b]{0.3\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{./Template LaTeX/Images/8.jpg}
+		\includegraphics[width=\textwidth]{./Template LaTeX/Images/From_emu/A_up_s.png}
 		\caption{Mettre à jour un compte}
 		\label{fig:five over x}
 	\end{subfigure}
 	\newline
 	\centering
 	\begin{subfigure}{0.3\textwidth}
-		\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/9.jpg}
+		\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/A_add_s.png}
 		\caption{Ajouter un compte}
 		\label{fig.SICAPI}
 	\end{subfigure}
@@ -688,12 +688,12 @@ La figure~\ref{serviceCl} représente la page principale de l’application pour
 \begin{figure}
 	\centering
 \begin{subfigure}{0.3\textwidth}
-	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/9.jpg}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/s_Home.png}
 	\caption{Interfaces d’accueil}
 	\label{klk}
 \end{subfigure}
 \begin{subfigure}{0.3\textwidth}
-	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/20.jpg}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/S_chatroom_res.png}
 	\caption{Interface de discussion}
 	\label{klk}
 \end{subfigure}
