--- a/Template LaTeX/TeXFiles/new_realisation.tex
+++ b/Template LaTeX/TeXFiles/new_realisation.tex
@@ -540,7 +540,7 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 	:} La figure suivante montre que le client peut envoyer un message (photo ou un texte) au service client et bien sur voir l'historique des messages.
 	\begin{figure}%
 	\centering
-	{{\includegraphics[width=5cm]{./Template LaTeX/Images/21.jpg} }}%
+	{{\includegraphics[width=5cm]{./Template LaTeX/Images/c.jpg} }}%
 	\caption{Interface de discussion}%
 	\label{fig:example}%
 \end{figure}
@@ -593,7 +593,7 @@ Dans ce qui suit, nous présentons quelques écrans de notre produit final des a
 	:} À partir de cette fenêtre le client a l'accès aux autres fonctionalistes de l'application (Modifier mot de passe,changer la langue ....)
 \begin{figure}%
 	\centering
-	{{\includegraphics[width=5cm]{./Template LaTeX/Images/22.jpg} }}%
+	{{\includegraphics[width=5cm]{./Template LaTeX/Images/menu.jpg} }}%
 	\caption{Interface de menu}%
 	\label{fig:example}%
 \end{figure}
@@ -688,16 +688,21 @@ La figure~\ref{serviceCl} représente la page principale de l’application pour
 \begin{figure}
 	\centering
 \begin{subfigure}{0.3\textwidth}
-	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/no_vue.png}
-	\caption{Interfaces d’accueil}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/a.png}
+	\caption{Notification}
 	\label{klk}
 \end{subfigure}
 \begin{subfigure}{0.3\textwidth}
-	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/S_chatroom_res.png}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/no_vue.png}
+	\caption{Interface d’accueil}
+	\label{klk}
+\end{subfigure}
+\begin{subfigure}{0.3\textwidth}
+	\includegraphics[width=\hsize, valign=m ]{./Template LaTeX/Images/From_emu/b.png}
 	\caption{Interface de discussion}
 	\label{klk}
 \end{subfigure}
-	\caption{Interface du compte administrateur
+	\caption{Interface du compte service client
 }
 \label{serviceCl}
 \end{figure}
